# sphinx_mindmap

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
doc/source/: conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/_static/puml/: sphinx_needs_data_explorer.puml
doc/source/test1/: index.rst
doc/source/test1/test2/: index.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_static/: minmap.html
docs/test1/: index.html
docs/test1/test2/: index.html
sphinx_mindmap/: __init__.py
