[tool.poetry]
name = "sphinx_mindmap"
version = "0.5.0"
description = "Visualization of Mindmap represented in plantuml format using visjs network"
authors = ["Michael Parkes <mparkes@post.cz>"]
readme = "README.rst"

[tool.poetry.dependencies]
python              = "^3.12"
Sphinx              = ">=6.1.3"
sphinx-book-theme   = "1.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
