[tool.poetry]
name = "sphinx_mindmap"
version = "0.5.0"
description = "Visualization of Mindmap represented in plantuml format using visjs network"
authors = ["Michael Parkes <mparkes@post.cz>"]
readme = "README.rst"
license = "MIT"
#homepage = "https://python-poetry.org/"
repository = "https://github.com/mi-parkes/sphinx_mindmap"
documentation = "https://mi-parkes.github.io/sphinx_mindmap/"

[tool.poetry.dependencies]
python              = "^3.12"
Sphinx              = ">=6.1.3"

[tool.poetry.group.dev.dependencies]
taskipy             = ">=1.11.0"

[tool.poetry.group.doc.dependencies]
sphinx-book-theme   = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
doc = "cd doc && sphinx-build -M html source build"
